# codex-switch

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  README.en.md  README.md  README.zh-CN.md  RELEASE_NOTES.md  SECURITY.md  index.html  package-lock.json  package.json  plan-active-profile-plan-detection.md  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: live_quota_check.rs
src-tauri/icons/: icon.icns  tray-template.rgba
src-tauri/mac/front/: index.html  main.ts  styles.css
src-tauri/mac/runtime/: bootstrap.rs  cli_shim.rs  install.rs  mod.rs  process.rs  profile_actions.rs  refresh_runtime.rs  switch.rs  windowing.rs
src-tauri/macos-native-tray/: Package.swift
src-tauri/shared/commands/: actions.rs  dashboard.rs  mod.rs  switch.rs  tools.rs
src-tauri/shared/front/: actions.ts  base.css  bootstrap-app.ts  dashboard-view-model.ts  i18n.ts  liquid-layout.css  preferences.ts  render.ts  state.ts  tauri.ts  theme.ts  types.ts  vite-env.d.ts
src-tauri/shared/platform/: hooks.rs  mod.rs
src-tauri/shared/runtime/: chatgpt_api.rs  cli.rs  codex_app_server.rs  codex_cli_path.rs  config.rs  fs_ops.rs  login_cancel.rs  login_runtime.rs  metadata.rs  mod.rs  models.rs  (+13 more)
src-tauri/src/: account_hint.rs  app_state.rs  cli_app.rs  desktop_app.rs  importer.rs  lib.rs  main.rs  profile.rs  profile_store.rs  profile_switch.rs  secret_store.rs  switch_transaction.rs  usage_history.rs  vscode_app.rs
(+44 files in other folders)
