[package]
name = "codex_switch"
version = "1.1.4"
description = "Native Tauri control panel for Codex account switching"
authors = ["ChArLiEdance"]
edition = "2021"

[lib]
name = "codex_switch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }
swift-rs = { version = "1.0.7", features = ["build"] }

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.44", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
ring = "0.17.14"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
semver = "1.0.28"
tauri = { version = "=2.10.1", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-opener = "2.5.3"
tauri-plugin-updater = "2.10.1"

[features]
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2.4.1"
